--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "autoprefixer": "^10.2.3",
     "html-react-parser": "^1.2.4",
+    "navbar.js": "^2.1.5",
     "next": "10.0.5",
     "postcss": "^8.2.4",
     "react": "17.0.1",
