--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "autoprefixer": "^10.2.3",
+    "frontend-collective-react-dnd-scrollzone": "^1.0.2",
     "html-react-parser": "^1.2.4",
     "navbar.js": "^2.1.5",
     "next": "10.0.5",
+    "patch-package": "^6.4.7",
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-sortable-tree": "^2.8.0",
     "serverless-mysql": "^1.5.4",
     "swiper": "^6.6.1",
     "tailwindcss": "^2.0.2"
