--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,6 @@ MYSQL_HOST=
 MYSQL_DATABASE=
 MYSQL_USERNAME=
 MYSQL_PASSWORD=
+
+NEXTAUTH_URL=http://localhost:3000
+SECRET=# Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
