--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "patch-package": "^6.4.7",
     "postcss": "^8.2.4",
     "react": "17.0.1",
+    "react-dnd": "^7.7.0",
     "react-dom": "17.0.1",
     "react-sortable-tree": "^2.8.0",
     "serverless-mysql": "^1.5.4",
