--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "frontend-collective-react-dnd-scrollzone": "^1.0.2",
     "html-react-parser": "^1.2.4",
     "navbar.js": "^2.1.5",
-    "next": "10.0.5",
+    "next": "^11.0.0",
     "next-auth": "^3.26.1",
     "patch-package": "^6.4.7",
-    "postcss": "^8.2.4",
+    "postcss": "^8.3.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-sortable-tree": "^2.8.0",
