--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "autoprefixer": "^10.2.3",
     "bcryptjs": "^2.4.3",
     "escape-html": "^1.0.3",
