--- a/.env.local.example
+++ b/.env.local.example
@@ -7,3 +7,6 @@ MYSQL_PASSWORD=
 
 NEXTAUTH_URL=http://localhost:3000
 SECRET=# Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+
+# Serveur d'image
+NEXT_PUBLIC_SERVER_IMAGE=https://api.eglise-russe-ste-genevieve-des-bois.eu
