--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.2.3",
     "bcryptjs": "^2.4.3",
+    "deep-equal": "^2.0.5",
     "escape-html": "^1.0.3",
     "frontend-collective-react-dnd-scrollzone": "^1.0.2",
     "html-react-parser": "^1.2.4",
