--- a/.env.local.example
+++ b/.env.local.example
@@ -10,3 +10,5 @@ SECRET=# Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/3
 
 # Serveur d'image
 NEXT_PUBLIC_SERVER_IMAGE=https://api.eglise-russe-ste-genevieve-des-bois.eu
+
+NEXT_PUBLIC_GOOGLE_ANALYTICS=
