--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "navbar.js": "^2.1.5",
     "next": "^10.1.3",
     "next-auth": "^3.26.1",
+    "next-translate": "^1.0.7",
     "patch-package": "^6.4.7",
     "postcss": "^8.3.5",
     "react": "17.0.1",
