--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^10.1.3",
     "next-auth": "^3.26.1",
     "next-translate": "^1.0.7",
+    "nodemailer": "^6.7.3",
     "patch-package": "^6.4.7",
     "postcss": "^8.3.5",
     "react": "17.0.1",
@@ -35,6 +36,7 @@
     "slate-hyperscript": "^0.62.0",
     "slate-react": "^0.65.2",
     "swiper": "^6.6.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "uuid": "^8.3.2"
   }
 }
