--- a/.env.local.example
+++ b/.env.local.example
@@ -12,3 +12,8 @@ SECRET=# Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/3
 NEXT_PUBLIC_SERVER_IMAGE=https://api.eglise-russe-ste-genevieve-des-bois.eu
 
 NEXT_PUBLIC_GOOGLE_ANALYTICS=
+
+EMAIL_PROVIDER=
+EMAIL_PASSWORD=
+
+DOMAIN=
